<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lottieandroidissue2271.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/valid_json_url_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valid_json_url_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/valid_json_url"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:lottie_url="@string/valid_json_url"
            app:lottie_autoPlay="true"
            app:lottie_renderMode="automatic"
            app:lottie_repeatCount="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valid_json_url_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/valid_json_url_with_placeholder_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valid_json_url_with_placeholder_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valid_json_url" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/valid_json_with_placeholder"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:lottie_url="@string/valid_json_url"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="77099-placeholder.json"
            app:lottie_autoPlay="true"
            app:lottie_renderMode="automatic"
            app:lottie_repeatCount="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valid_json_url_with_placeholder_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/invalid_json_url_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invalid_json_url_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valid_json_with_placeholder" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/invalid_json_url"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:lottie_url="@string/invalid_json_url"
            app:lottie_autoPlay="true"
            app:lottie_renderMode="automatic"
            app:lottie_repeatCount="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invalid_json_url_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/invalid_json_url_with_placeholder_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/invalid_json_url_with_placeholder_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invalid_json_url" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/invalid_json_with_placeholder"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:lottie_url="@string/invalid_json_url"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="77099-placeholder.json"
            app:lottie_autoPlay="true"
            app:lottie_renderMode="automatic"
            app:lottie_repeatCount="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invalid_json_url_with_placeholder_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>